# stargaze

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: workloads.rs
src/: lib.rs  main.rs
tests/: cli.rs  live.rs  parse.rs  search.rs  store.rs
