[package]
name = "stargaze"
version = "0.1.2"
edition = "2021"
rust-version = "1.76"
authors = ["bkataru <baalateja.k@gmail.com>"]
description = "Cache and search your GitHub stars from the terminal"
repository = "https://github.com/bkataru/stargaze"
homepage = "https://crates.io/crates/stargaze"
documentation = "https://docs.rs/stargaze"
license = "MIT"
readme = "README.md"
keywords = ["github", "stars", "cli", "search", "cache"]
categories = ["command-line-utilities"]
exclude = [
    ".gitignore",
    ".github/*",
    "target/*",
]

[lib]
name = "stargaze"
path = "src/lib.rs"

[[bin]]
name = "stargaze"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
redb = "2.2"
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
lru = "0.12"
tiny_http = "0.12"
fuzzy-matcher = "0.3"

[dev-dependencies]
tempfile = "3.13"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[[bench]]
name = "workloads"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
